--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+html,
+body,
+#root {
+  min-height: 100%;
+  /* height: 100%; */
+}
+
+img {
+  object-fit: cover;
+}
+
+::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra vertical */
+  height: 8px; /* Altura de la barra horizontal */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color del track (área detrás del thumb) */
+  margin: 28px 0
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del thumb (barra deslizante) */
+  border-radius: 14px;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del thumb al pasar el mouse por encima */
 }
